--- a/BlazorServeApp/Shared/NavMenu.razor
+++ b/BlazorServeApp/Shared/NavMenu.razor
@@ -32,6 +32,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Email data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="DeviceManagement">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Device Management
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="MailingList">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Mailing List
+            </NavLink>
+        </li>
     </ul>
 </div>
 
